--- a/views/work.jade
+++ b/views/work.jade
@@ -2,101 +2,96 @@ extends layout
 
 block content
 
-	h3 FCC.gov
-	a(href="http://www.fcc.gov/")
-		img(data-original="/img/fcc.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb")
+	h2 ~ previous work ~
+
+	h3 User Research
+	img(data-original="/img/work/research.jpg", src="/img/placeholder.gif", alt="", height="546", width="618", class="thumb one-half right")
 	ul.list
 		li 
-			| Scripted automated tests using Python and 
-			a(href="http://docs.seleniumhq.org/") Selenium
-			|  to ensure continuing functionality.
-		li Created wireframes and reports based on user behavior and site analytics.
-		li Wrote and recorded tutorials for developers.
-		li Developed a series of jQuery plugins.
-		li HTML, CSS and jQuery
-		li.subtle Drupal
-
-	h3 Voto Latino
-	a(href="https://play.google.com/store/apps/details?id=org.votolatino.android")
-		img(data-original="/img/voto-android.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
-	a(href="https://itunes.apple.com/app/votolatino/id568988087?mt=8")
-		img(data-original="/img/voto-ios.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
+			h5 Field research
+			p Visited facilities and people to shadow and interview. Poured through recorded sessions, listened to endless phone calls and scoured all available analytics.
+		li
+			h5 User tests 
+			p Used research to define tasks, create personas and conduct user tests, remotely and in person.
+		li
+			h5 Findings
+			p Converted findings into reports, sketches, wireframes and working mockups.
+	
+	h3 Prototyping
 	ul.list
-		li 
-			| Coded the front end of Voto Latino's mobile app for 
-			a(href="https://itunes.apple.com/app/votolatino/id568988087?mt=8") iOS 
-			| and 
-			a(href="https://play.google.com/store/apps/details?id=org.votolatino.android") Android
-			| .
-		li HTML, CSS and jQuery
-		li.subtle PhoneGap
+		li
+			img(data-original="/img/work/sketching.jpg", src="/img/placeholder.gif", alt="", height="546", width="618", class="thumb one-half left")
+			h5 Sketching
+			p Rough sketches and drawings can quickly communicate ideas to find out which ones are worth pursuing.
+		li.clear
+			img(data-original="/img/work/wireframes.jpg", src="/img/placeholder.gif", alt="", height="546", width="618", class="thumb one-half left")
+			h5 Wireframing
+			p Usually in Omnigraffle or one of the 
+				a(href="http://balsamiq.com") online
+				| &nbsp;
+				a(href="http://gomockingbird.com") tools
+				| .
+		li.clear
+			img(data-original="/img/work/clickable.jpg", src="/img/placeholder.gif", alt="", height="546", width="618", class="thumb one-half left")
+			h5 Clickable mockups
+			p Using HTML, PDFs or online tools, putting something usable in front of users and stakeholders can almost always communicate more than any other method. A great way to user test ideas before deveopment.
+	
+	h3 Product creation
+	ul#products.list
+		li.one-half.left
+			h4 Move sharing
+			a(href="/img/work/trip.jpg")
+				img(data-original="/img/work/trip.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-half left")
+			p Resulting from watching people share their moves on social media outlets, this page collects social media feeds onto a single page for the duration of the move to make sharing with family and friends a little easier.
+		li.one-half.right
+			h4 Mobile moving companion
+			a(href="/img/work/companion.jpg")
+				img(data-original="/img/work/companion.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-half left") during a move to make it easily shareable.
+			p The result of studying people moving, this mobile site helps the customer throughout their move, eliminating the need for many phone calls and reducing confusion while on the road.
+		li.clear
+			h4 Intranet applications
+			p.one-third Condensed a sprawling intranet into more usable apps and updated the code to work with mobile devices.
+			div.two-thirds
+				a(href="/img/work/tools_mobile.jpg")
+					img(data-original="/img/work/tools_mobile.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-third left")
+				a(href="/img/work/tools.jpg")
+					img(data-original="/img/work/tools.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-half left")
 
-	h3 U-Haul's internal tools
-	a(href="/img/tools_mobile.jpg")
-		img(data-original="/img/tools_mobile.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
-	a(href="/img/tools.jpg")
-		img(data-original="/img/tools.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
+	h3 Coding
+	div.two-thirds.right
+		a(href="http://reliefweb.int/")
+			img(data-original="/img/work/reliefweb.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-third right")
+		a(href="https://itunes.apple.com/app/votolatino/id568988087?mt=8")
+			img(data-original="/img/work/voto-ios.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-third right")
+		a(href="http://amerco.com")
+			img(data-original="/img/work/amerco.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-third right")
 	ul.list
-		li Created and improved digital tools (mobile and public sites, intranet, point of sales, devices used on counters).
-		li Shadowed users inside and outside the company, defined tasks for usability testing and incorporated findings, listened to hours and hours of phone calls and poured through analytics and recorded sessions.
-		li Organized tools from various sites throughout the company into one cohesive unit.
-		li Updated old code by various departments to be mobile.
-		li HTML, CSS and jQuery
-		li.subtle Visual Studio
-
-	h3 U-Haul trip sharing
-	a(href="/img/trip.jpg")
-		img(data-original="/img/trip.jpg", src="/img/placeholder.gif", height="100%", width="100%", height="100%", width="100%", class="thumb")
+		li
+			h5 Languages
+			p Javascript/jQuery, Python, PHP, MYSQL
+		li
+			h5 HTML, CSS and Preprocessors
+			p LESS, SaSS, Stylus
+		li
+			h5 Environments
+			p Drupal, Node, PhoneGap (Android and iOS), Visual Studio, Wordpress
+	p.subtle.small This site uses Node, Jade, Express and Stylus, see it on 
+		a(href="https://github.com/mrdcrowley/david-crowley-com") GitHub
+		| .
+	h3 Arduino and Raspberry Pi
 	ul.list
-		li Designed and championed a tool that offers to import social media accounts for the duration of a move and share with friends and family.
-		li Wireframes, mockups, CSS, HTML and graphics
-
-	h3 AMERCO
-	a(href="http://www.amerco.com/")
-		img(data-original="/img/amerco.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb")
-	ul.list
-		li Designed the corporate website for <span class="nowrap">U-Haul's</span> parent company.
-		li Met needs of company and government.
-		li Designed tools to allow content creation.
-		li Wireframes, mockups, graphics, HTML and CSS
-
-	h3 Ultimate Machine (Arduino)
-	<iframe height="360" width="640" src="http://www.youtube.com/embed/4_43jzikj1I" frameborder="0" allowfullscreen class="thumb"></iframe>
-	ul.list
-		li <a href="https://github.com/mrdcrowley/ultimate_machine">Built a version</a> of information theorist Claude Shannon's <a href="http://www.kk.org/thetechnium/archives/2008/03/the_unspeakable.php">Ultimate Machine</a>.
-
-	div.two-thirds.small.left
-		h3 Other work
-		div.one-half.left
-			h4 U-Haul
-			ul.list
-				li Created and updated electronic signage.
-				li Customer and employee shadowing, visitor analytics, user interviews and usability tests.
-				li Rewrote CSS for responsive and mobile ages.
-				li Created, improved and eliminated various pages, sites, wireframes, mockups, recommendations and processes.
-			h4 U-Haul unattended rentals
-			ul.list
-				li Designed an unattended rental experience for iPads.
-				li Observed locations.
-				li Created wireframes and mockups.
-		div.one-half.right
-			h4 Human Resources
-			ul.list
-				li Redesigned the Human Resources site for <span class="nowrap">U-Haul</span> employees.
-				li Organized a sprawling site into three sections.
-				li Mockups, HTML and CSS
-			h4 Employee scheduling
-			ul.list
-				li Redesigned the tool <span class="nowrap">U-Haul</span> uses to schedule employees. The existing version had grown buggy and required Internet Explorer and training.
-				li Designed a simple tool that is still working years later and has transitioned to mobile devices with ease.
-				li Removed the need for training materials and courses.
-	div.one-third.small.right
-		h3 Personal
-		ul.list
-			li Short distance runner
-			li Arduino and Raspberry Pi hacker
-			li Wood and 3D printing tinkerer
-			li Dog companion
-			li Music and boring book appreciator
-			li Drinker of dark coffee, tea and beer
-			li Baseball watcher and basketball amateur
+		li
+			h5 Socialite
+			p The 
+				a(href="https://github.com/mrdcrowley/socialite") Socialite
+				|  lights up when a tumblr gets some 
+				span.heart &#9829;
+				| .
+		li
+			h5 Ultimate Machine
+			p
+				a(href="https://github.com/mrdcrowley/ultimate_machine") Created a version
+				|  of information theorist Claude Shannon's 
+				a(href="http://www.kk.org/thetechnium/archives/2008/03/the_unspeakable.php") Ultimate Machine
+				| .
+			iframe(height="360", width="640", src="http://www.youtube.com/embed/4_43jzikj1I", frameborder="0", allowfullscreen)
