--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 !!!5
 html
 	head
-		title #{title} - David Crowley
+		title David Crowley - #{title}
 		link(rel='stylesheet', href='/css/style.css')
 
 	body(id='#{cssID}')
@@ -10,7 +10,7 @@ html
 				h1
 					span(data-shadow-text="David Crowley") David Crowley
 			p.byline
-				| Interaction designer, charmed by simplicity in digital interactions.<br/>
+				| Experience designer, charmed by simplicity.<br/>
 				| Found at 
 				a(href="mailto:david@slantback.net") david@slantback.net
 				| , 
@@ -27,7 +27,7 @@ html
 				block content
 				block tumblr
 		footer
-			p <a href="https://github.com/mrdcrowley/david-crowley-com">View on Github</a> | <a href="/work/">Portfolio</a>
+			p <a href="https://github.com/mrdcrowley/david-crowley-com">View on Github</a> | <a href="/portfolio/">Portfolio</a>
 
 	block scripts
 		script(src='/js/jquery.js')
