--- a/views/work.jade
+++ b/views/work.jade
@@ -2,21 +2,19 @@ extends layout
 
 block content
 
-	h2 ~ previous work ~
+	h2 ~ Portfolio ~
 
-	h3 User Research
-	img(data-original="/img/work/research.jpg", src="/img/placeholder.gif", alt="", height="546", width="618", class="thumb one-half right")
+	h3 Research
 	ul.list
-		li 
+		li.one-third
 			h5 Field research
-			p Visited facilities and people to shadow and interview. Poured through recorded sessions, listened to endless phone calls and scoured all available analytics.
-		li
+			p Visit people and places to shadow and interview. Scour recorded sessions, phone calls and analytics.
+		li.one-third
 			h5 User tests 
-			p Used research to define tasks, create personas and conduct user tests, remotely and in person.
-		li
+			p Use research to define tasks, create personas and conduct user tests, remotely and in person.
+		li.one-third
 			h5 Findings
-			p Converted findings into reports, sketches, wireframes and working mockups.
-	
+			p Convert findings into reports, sketches, wireframes and working mockups.
 	h3 Prototyping
 	ul.list
 		li
@@ -34,28 +32,27 @@ block content
 		li.clear
 			img(data-original="/img/work/clickable.jpg", src="/img/placeholder.gif", alt="", height="546", width="618", class="thumb one-half left")
 			h5 Clickable mockups
-			p Using HTML, PDFs or online tools, putting something usable in front of users and stakeholders can almost always communicate more than any other method. A great way to user test ideas before deveopment.
-	
+			p Using HTML, PDFs or online tools, putting something usable in front of users and stakeholders can communicate and test ideas quickly and before serious development begins.
 	h3 Product creation
 	ul#products.list
 		li.one-half.left
 			h4 Move sharing
 			a(href="/img/work/trip.jpg")
 				img(data-original="/img/work/trip.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-half left")
-			p Resulting from watching people share their moves on social media outlets, this page collects social media feeds onto a single page for the duration of the move to make sharing with family and friends a little easier.
+			p This page collects social media feeds onto a single page for the duration of a move to make sharing with non-technical family and friends a little easier.
 		li.one-half.right
-			h4 Mobile moving companion
+			h4 Moving companion
 			a(href="/img/work/companion.jpg")
 				img(data-original="/img/work/companion.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-half left") during a move to make it easily shareable.
 			p The result of studying people moving, this mobile site helps the customer throughout their move, eliminating the need for many phone calls and reducing confusion while on the road.
 		li.clear
 			h4 Intranet applications
-			p.one-third Condensed a sprawling intranet into more usable apps and updated the code to work with mobile devices.
-			div.two-thirds
-				a(href="/img/work/tools_mobile.jpg")
-					img(data-original="/img/work/tools_mobile.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-third left")
+			p.one-third Condensed a sprawling intranet into smaller, more usable apps and updated the code to work with mobile devices.
+			div.two-thirds.right
 				a(href="/img/work/tools.jpg")
-					img(data-original="/img/work/tools.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-half left")
+					img(data-original="/img/work/tools.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-half right")
+				a(href="/img/work/tools_mobile.jpg")
+					img(data-original="/img/work/tools_mobile.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-third right")
 
 	h3 Coding
 	div.two-thirds.right
