new ultimate machine video

--- a/views/work.jade
+++ b/views/work.jade
@@ -91,4 +91,5 @@ block content
 				|  of information theorist Claude Shannon's 
 				a(href="http://www.kk.org/thetechnium/archives/2008/03/the_unspeakable.php") Ultimate Machine
 				| .
-			iframe(height="360", width="640", src="http://www.youtube.com/embed/4_43jzikj1I", frameborder="0", allowfullscreen)
+			iframe(height="360", width="640", src="http://www.youtube.com/embed/k3xFX3sR0iE", frameborder="0", allowfullscreen)
+
