--- a/views/work.jade
+++ b/views/work.jade
@@ -18,11 +18,11 @@ block content
 	h3 Prototyping
 	ul.list
 		li
-			img(data-original="/img/work/sketching.jpg", src="/img/placeholder.gif", alt="", height="546", width="618", class="thumb one-half left")
+			img(data-original="/img/work/sketching.jpg", src="/img/placeholder.gif", alt="", height="280", width="600", class="thumb one-half left")
 			h5 Sketching
 			p Rough sketches and drawings can quickly communicate ideas to find out which ones are worth pursuing.
 		li.clear
-			img(data-original="/img/work/wireframes.jpg", src="/img/placeholder.gif", alt="", height="546", width="618", class="thumb one-half left")
+			img(data-original="/img/work/wireframes.jpg", src="/img/placeholder.gif", alt="", height="280", width="600", class="thumb one-half left")
 			h5 Wireframing
 			p Usually in Omnigraffle or one of the 
 				a(href="http://balsamiq.com") online
@@ -30,7 +30,7 @@ block content
 				a(href="http://gomockingbird.com") tools
 				| .
 		li.clear
-			img(data-original="/img/work/clickable.jpg", src="/img/placeholder.gif", alt="", height="546", width="618", class="thumb one-half left")
+			img(data-original="/img/work/clickable.jpg", src="/img/placeholder.gif", alt="", height="280", width="600", class="thumb one-half left")
 			h5 Clickable mockups
 			p Using HTML, PDFs or online tools, putting something usable in front of users and stakeholders can communicate and test ideas quickly and before serious development begins.
 	h3 Product creation
@@ -38,30 +38,36 @@ block content
 		li.one-half.left
 			h4 Move sharing
 			a(href="/img/work/trip.jpg")
-				img(data-original="/img/work/trip.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-half left")
+				img(data-original="/img/work/trip.jpg", src="/img/placeholder.gif", alt="", height="1861", width="955", class="thumb one-half left")
 			p This page collects social media feeds onto a single page for the duration of a move to make sharing with non-technical family and friends a little easier.
 		li.one-half.right
 			h4 Moving companion
 			a(href="/img/work/companion.jpg")
-				img(data-original="/img/work/companion.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-half left") during a move to make it easily shareable.
+				img(data-original="/img/work/companion.jpg", src="/img/placeholder.gif", alt="", height="922", width="385", class="thumb one-half left") during a move to make it easily shareable.
 			p The result of studying people moving, this mobile site helps the customer throughout their move, eliminating the need for many phone calls and reducing confusion while on the road.
 		li.clear
 			h4 Intranet applications
 			p.one-third Condensed a sprawling intranet into smaller, more usable apps and updated the code to work with mobile devices.
 			div.two-thirds.right
 				a(href="/img/work/tools.jpg")
-					img(data-original="/img/work/tools.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-half right")
+					img(data-original="/img/work/tools.jpg", src="/img/placeholder.gif", alt="", height="1045", width="987", class="thumb one-half right")
 				a(href="/img/work/tools_mobile.jpg")
-					img(data-original="/img/work/tools_mobile.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-third right")
+					img(data-original="/img/work/tools_mobile.jpg", src="/img/placeholder.gif", alt="", height="744", width="396", class="thumb one-third right")
 
 	h3 Coding
 	div.two-thirds.right
 		a(href="http://reliefweb.int/")
-			img(data-original="/img/work/reliefweb.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-third right")
+			img(data-original="/img/work/reliefweb.jpg", src="/img/placeholder.gif", alt="", height="2597", width="1046", class="thumb one-third right")
 		a(href="https://itunes.apple.com/app/votolatino/id568988087?mt=8")
-			img(data-original="/img/work/voto-ios.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-third right")
+			img(data-original="/img/work/voto-ios.jpg", src="/img/placeholder.gif", alt="", height="480", width="320", class="thumb one-third right")
 		a(href="http://amerco.com")
-			img(data-original="/img/work/amerco.jpg", src="/img/placeholder.gif", alt="", height="100%", width="100%", class="thumb one-third right")
+			img(data-original="/img/work/amerco.jpg", src="/img/placeholder.gif", alt="", height="904", width="680", class="thumb one-third right")
+		a(href="/img/work/seaphone.jpg")
+			img(data-original="/img/work/seaphone.jpg", src="/img/placeholder.gif", alt="", height="1485", width="760", class="thumb one-third right")
+		a(href="/img/work/cloud.jpg")
+			img(data-original="/img/work/cloud.jpg", src="/img/placeholder.gif", alt="", height="1225", width="1140", class="thumb one-third right")
+		a(href="/img/work/seabourne.jpg")
+			img(data-original="/img/work/seabourne.jpg", src="/img/placeholder.gif", alt="", height="900", width="1200", class="thumb one-third right")
 	ul.list
 		li
 			h5 Languages
