--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -250,19 +250,23 @@ ul.posts
 	header
 		padding-left 2em
 	#container
-		padding 2em
+		padding 0 2em
 	.one-half,
 	.one-third,
 	.two-thirds
+		float none
 		width auto
 	.left,
 	.right
 		float none
-	.thumb,
+	.thumb
 	.thumb.small
+	.thumb.left
+	.thumb.right
 		float none
 		height auto
 		margin 0
 		margin-bottom 1em
-		max-width: 100%
+		max-width 100%
+		outline 0
 		width 100%
