--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@
 html
 	head
 		title David Crowley - #{title}
+		link(rel='stylesheet', href='/css/jquery.fs.boxer.css')
 		link(rel='stylesheet', href='/css/style.css')
 
 	body(id='#{cssID}')
@@ -31,6 +32,7 @@ html
 
 	block scripts
 		script(src='/js/jquery.js')
+		script(src='/js/jquery.fs.boxer.js')
 		script(src='/js/jquery.lazyload.min.js')
 		script(src='/js/david-crowley-com.js')
 
