--- a/views/work.jade
+++ b/views/work.jade
@@ -5,7 +5,7 @@ block content
 	h2 ~ Portfolio ~
 
 	h3 Research
-	ul.list
+	ul#research.list
 		li.one-third
 			h5 Field research
 			p Visit people and places to shadow and interview. Scour recorded sessions, phone calls and analytics.
