--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -13,8 +13,8 @@ colorLink = #00a6cd
 colorLinkHover = lighten(colorLink, 10%)
 colorHeader = #333
 colorMain = #333
-fontBody = 'Noto Sans', Georgia, sans-serif
-fontAlt = Arvo, Georgia, sans-serif
+fontBody = Arvo, Georgia, sans-serif
+fontAlt = 'Noto Sans', Georgia, sans-serif
 animationSpeed = .2s
 
 
@@ -26,6 +26,9 @@ a
 		color colorLinkHover
 p, h1, h2, h3, h4, h5, h6
 	margin-bottom 1em
+h1, h2, h3, h4, h5, h6
+	color #666
+	font-family fontAlt
 em
 	font-style italic
 strong
@@ -46,9 +49,9 @@ ul
 /* =Structure */
 body
 	background colorBackground url('/img/bg.png')
-	color colorBody
+	color lighten(colorHeader, 50%)
 	font-family fontBody
-	line-height 150%
+	line-height 170%
 	min-width 600px
 header
 	background transparent url('/img/headerBg.png') bottom repeat-x
@@ -131,17 +134,14 @@ header
 	h3
 		background rgba(0,0,0,.2)
 		clear both
-		font-family fontAlt
 		font-size 180%
 		font-weight 700
 		padding .5em
 	h4
 		clear both
-		color #666
 		font-size: 140%
 		font-weight 700
 	h5
-		color #666
 		font-weight bold
 		margin 0
 
@@ -157,7 +157,6 @@ footer
 .blogPost
 	background rgba(0,0,0,.05)
 	color lighten(colorHeader, 50%)
-	font-family fontAlt
 	font-size: 125%
 	line-height 160%
 	margin-bottom 3em
@@ -165,25 +164,24 @@ footer
 	padding 1em
 	padding-bottom 0
 	text-align left
-	.meta
-		clear both
-		color lighten(colorHeader, 65%)
-		font-family fontBody
-		font-size 75%
-		margin 0
-		a
-			color lighten(colorHeader, 65%)
-			&:hover
-				text-decoration underline
 	h4
 		margin 0
 		a
 			color colorBody
-			font-family fontBody
+			font-family fontAlt
 			display inline
 			text-decoration none
 			&:hover
 				text-decoration underline
+.meta
+	clear both
+	color lighten(colorHeader, 65%)
+	font-size 75%
+	margin 0
+	a
+		color lighten(colorHeader, 65%)
+		&:hover
+			text-decoration underline
 #blogList
 	clear both
 	ul.list
@@ -192,6 +190,7 @@ footer
 			display block
 			margin 0
 			padding 1em 0
+			text-align left
 			.meta
 				float right
 
@@ -202,13 +201,9 @@ footer
 		margin-bottom 3em
 		li
 			border-bottom 1px solid rgba(0,0,0,.05)
-			color lighten(colorHeader, 40%)
-			font-family fontAlt
-			line-height 170%
 			padding 40px 0
 			margin 0
 			&.quote
-				color lighten(colorHeader, 50%)
 				font-size: 125%
 				line-height 170%
 				.source
