--- a/views/includes/blogList.jade
+++ b/views/includes/blogList.jade
@@ -1,7 +1,9 @@
+- var title = 'Posts'
+- var cssID = 'blogList'
+
 div#blogList
-	h6 Older
 	ul.list
-		- var posts = getPosts(1,99)
+		- var posts = getPosts(0)
 		- each post in posts
 			li
 				a(href=post.url) !{post.title}
