--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,6 +26,7 @@ html
 			#content
 				block content
 				block blogPost
+				block blogList
 				block tumblr
 		footer
 			p <a href="https://github.com/mrdcrowley/david-crowley-com">View on Github</a> | <a href="/portfolio/">Portfolio</a>
