--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -154,15 +154,11 @@ footer
 	text-align center
 
 /* =Blog */
-.blogPost
-	background rgba(0,0,0,.05)
+.blog
 	color lighten(colorHeader, 50%)
 	font-size: 125%
 	line-height 160%
 	margin-bottom 3em
-	overflow hidden
-	padding 1em
-	padding-bottom 0
 	text-align left
 	h4
 		margin 0
@@ -173,6 +169,11 @@ footer
 			text-decoration none
 			&:hover
 				text-decoration underline
+.blogPreview
+	background rgba(0,0,0,.05)
+	overflow hidden
+	padding 1em
+	padding-bottom 0
 .meta
 	clear both
 	color lighten(colorHeader, 65%)
