--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,6 +123,11 @@ h6 {
   color: #666;
   font-family: 'Noto Sans', Georgia, sans-serif;
 }
+code {
+  background: rgba(0,0,0,0.05);
+  font-family: Consolas, monospace;
+  padding: 0 0.25em;
+}
 em {
   font-style: italic;
 }
@@ -316,13 +321,20 @@ footer {
 }
 #blogList {
   clear: both;
+  text-align: left;
 }
 #blogList ul.list li {
   border-top: 1px solid rgba(0,0,0,0.05);
   display: block;
   margin: 0;
-  padding: 1em 0;
-  text-align: left;
+  padding: 1em;
+}
+#blogList ul.list li.active {
+  background: rgba(0,0,0,0.05);
+}
+#blogList ul.list li.active a {
+  color: #444;
+  text-decoration: none;
 }
 #blogList ul.list li .meta {
   float: right;
@@ -400,6 +412,14 @@ footer {
   clear: none;
   float: left;
   width: 66%;
+}
+.bullets {
+  list-style-type: disc;
+}
+.bullets li {
+  margin-top: 1em;
+  margin-left: 1em;
+  padding-left: 0.25em;
 }
 .center {
   text-align: center;
