snoop bloggy blog

--- a/_posts/cobblers-children-have-no-shoes.jade
+++ b/_posts/cobblers-children-have-no-shoes.jade
@@ -2,14 +2,14 @@
 	"title" 	: "Cobbler's children have no shoes",
 	"tags"  	: [ "site" ],
 	"date" 		: "5-8-2013",
-	"preview"	: "p A few words about the new site."
+	"preview"	: "p A few notes and disclaimers about the new site."
 }}}
 
 h5 Notes and disclaimers
 
 ul.bullets
 	li This site is still being added to, please pardon any weirdness.
-	li I have not checked this site in IE and I don't know when I will. I feel zero regret over this.
+	li I have not checked this site in IE and I don't know when I will. I regret nothing.
 	li 
 		a(href="http://nodejs.org") Node
 		|  is fun and works in 
