--- a/views/includes/blogPreview.jade
+++ b/views/includes/blogPreview.jade
@@ -1,11 +1,11 @@
 div.blog.blogPreview
 	- var posts = getPosts(0,1)
+	- var monthName = [ "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" ]
 	- each post in posts
 		h4
 			a(href=post.url) !{post.title}
 		p.meta
-			#{post.date.getMonth()+1}, #{post.date.getDate()} #{post.date.getFullYear()} 
-			- each tag in post.tags
-				a( href= tagUrl( tag )) !{tag}
-				| , 
+			- var monthNumber = post.date.getMonth()
+			- var month = monthName[monthNumber]
+			#{month} #{post.date.getDate()}, #{post.date.getFullYear()}
 		!{post.preview}
